<resources>
    <string name="app_name">AndroidTemplate</string>
    <string name="repeat_request">Повторить запрос</string>
    <string name="something_went_wrong">Что-то пошло не так :\'(</string>
    <string name="who">Кому:</string>
    <string name="from">От:</string>
    <string name="active">Активные</string>
    <string name="outgoing">Исходящие</string>
    <string name="copy">В копии</string>
    <string name="archive">Архив</string>
    <string name="text_task">Нужно обсудить презенацию и внести финальные правки!</string>
    <string name="incoming">Входящие</string>
    <string name="executor">Исполнитель:</string>
    <string name="observers">Наблюдатели:</string>
    <string name="go_to_chat">перейти в чат задачи</string>
    <string name="task_requires_confirmation">Задача требует подтверждения</string>
    <string name="tags">Тэги:</string>
    <string name="an_hour">За час</string>
    <string name="reminder">Напоминание:</string>
    <string name="deadline">Срок выполнения:</string>
    <string name="add">Добавить</string>
    <string name="meeting">#встреча</string>
    <string name="conference">#совещание</string>
    <string name="for_checking">На проверку</string>
    <string name="tmp_task_text_big">1. Задачник: (4 часа) \n- Содержимое карточек, исполнители и т.д. \n- Логика работы в вебе \n- Логика работы в мобильных \n- Логика пушей в задачах
        \n2. Сравнение логики работы и фикс недочетов в работе: - Авторизация (30 мин) - Команды и работа с ними (приглашения, контакты, иерархия, секции, профили)
        (1 час) - Чаты и группы(профили, приглашения, статусы,история, очереди и т.д.) (1.5 часа) - Аналитика (1 час) (Реально: 2ч)</string>
    <string name="opened">Открытые</string>
    <string name="archival">Архивыные</string>
    <string name="checking">На проверку</string>
    <string name="task_type">Тип задачи</string>
    <string name="task_status">Статус задачи</string>
    <string name="people">Люди</string>



    <string name="text_intro1">Умный мессенджер, \nкоторый помогает решать \nзадачи!</string>
    <string name="start_using">Начать пользоваться</string>
    <string name="text_intro2">команды для работы и личных \nпроектов, приглашайте других \nучастников</string>
    <string name="create">Создавайте</string>
    <string name="text_intro3">между вашими командами и \nбудте в центре событий</string>
    <string name="tv_switch">Переключайтесь</string>
    <string name="communicate">Общайтесь</string>
    <string name="text_intro4">с участниками команды в \nличных и групповых чатах </string>
    <string name="highlight">Выделяйте</string>
    <string name="text_intro5">важное в переписке: \nпревращайте любые сообщения \nв задачи</string>
    <string name="assign">Назначайте</string>
    <string name="text_intro6">задачи себе и другим \nучастникам, отслеживайте \nстатус их выполнения</string>
    <string name="phone_message">Телефон нам нужен для того, чтобы обезопасить \nваш аккаунт и держать вас в курсе событий</string>
    <string name="phone_number">Номер телефона</string>
    <string name="enter_phone_number">Введите ваш номер телефона</string>
    <string name="get_code">Получить код</string>
    <string name="enter_code">Введите код подтверждения</string>
    <string name="code_message">На номер +7 937 478-87-98 был выслан \nкод подтверждения</string>
    <string name="resend_code">Выслать код повторно</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="let_create_team">Давайте создадим Вашу первую \nкоманду для совместной работы:</string>
    <string name="team_name">Название команды</string>
    <string name="invite_partner">Пригласить участников</string>

</resources>
