<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvActive"
            style="@style/ItemFilter"
            android:text="@string/active"
            android:textColor="@color/colorAccent" />

        <ImageView
            android:id="@+id/ivArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/activity_middle_margin"
            android:src="@drawable/ic_arrow_up_blue" />

        <TextView
            android:id="@+id/tvNumberActive"
            style="@style/CircleWithNumber"
            android:layout_marginRight="@dimen/activity_middle_margin"
            android:layout_toLeftOf="@+id/ivArrow"
            android:text="1" />

    </RelativeLayout>

    <include layout="@layout/separate_line" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvIncoming"
                style="@style/ItemFilter"
                android:text="@string/incoming" />

            <ImageView
                android:id="@+id/ivArrowIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_middle_margin"
                android:src="@drawable/ic_arrow_up_blue"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tvNumberIncoming"
                style="@style/CircleWithNumber"
                android:layout_marginRight="@dimen/activity_middle_margin"
                android:layout_toLeftOf="@+id/ivArrowIn"
                android:text="1" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvOutgoing"
            style="@style/ItemFilter"
            android:text="@string/outgoing" />

        <TextView
            android:id="@+id/tvCopy"
            style="@style/ItemFilter"
            android:text="@string/copy" />

        <TextView
            android:id="@+id/tvArchive"
            style="@style/ItemFilter"
            android:text="@string/archive" />

    </LinearLayout>

</LinearLayout>
