<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        style="@style/NewSubHeaderText.Medium"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginBottom="@dimen/new_small_margin"
        android:text="@string/enter_code" />

    <TextView
        style="@style/NewSmallText.Gray"
        android:layout_marginBottom="@dimen/standard_margin"
        android:text="@string/code_message"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <com.alimuzaffar.lib.pin.PinEntryEditText
            android:id="@+id/code_entry"
            style="@style/StandardText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:cursorVisible="true"
            android:digits="1234567890"
            android:inputType="number"
            android:layoutDirection="ltr"
            android:maxLength="5"
            android:textIsSelectable="false"
            app:pinLineColors="@color/line_gray"
            app:pinLineStroke="1dp"
            app:pinLineStrokeSelected="2dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_resend_code"
        style="@style/NewSmallText.Blue"
        android:layout_margin="@dimen/standard_margin"
        android:text="@string/resend_code"
        android:textAllCaps="true" />

</LinearLayout>