<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_middle_margin"
            android:layout_marginTop="@dimen/activity_middle_margin"
            android:layout_marginBottom="@dimen/activity_middle_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="Создана: 23.12.2017"
                    android:textColor="@color/color_separate_line" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ciAvatar"
                    android:layout_width="@dimen/avatar"
                    android:layout_height="@dimen/avatar"
                    android:layout_marginLeft="@dimen/activity_small_margin"
                    android:src="@drawable/ava" />

            </LinearLayout>

            <TextView
                android:id="@+id/title_task"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_small_margin"
                android:layout_marginRight="@dimen/activity_middle_margin"
                android:text="@string/text_task"
                android:textColor="@color/colorTextBold"
                android:textSize="@dimen/text_title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_task"
                style="@style/TextNormal"
                android:layout_marginTop="@dimen/activity_middle_margin"
                android:layout_marginRight="@dimen/activity_middle_margin"
                android:text="@string/tmp_task_text_big" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_big_margin"
                android:text="@string/executor"
                android:textColor="@color/color_separate_line" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_small_margin"
                android:layout_marginBottom="@dimen/activity_middle_margin"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ciAvatarExecutor"
                    android:layout_width="@dimen/avatar"
                    android:layout_height="@dimen/avatar"
                    android:src="@drawable/ava" />

                <TextView
                    style="@style/TextNormal"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/activity_small_margin"
                    android:text="Елена Свистоплясова" />

            </LinearLayout>

            <include layout="@layout/separate_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_middle_margin"
                android:text="@string/observers"
                android:textColor="@color/color_separate_line" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_small_margin"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ciAvatar"
                    android:layout_width="@dimen/avatar"
                    android:layout_height="@dimen/avatar"
                    android:src="@drawable/ava" />

                <TextView
                    style="@style/TextNormal"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/activity_small_margin"
                    android:text="Елена Свистоплясова" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_small_margin"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ciAvatar"
                    android:layout_width="@dimen/avatar"
                    android:layout_height="@dimen/avatar"
                    android:src="@drawable/ava" />

                <TextView
                    style="@style/TextNormal"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/activity_small_margin"
                    android:text="Елена Свистоплясова" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_small_margin">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ciAvatar"
                    android:layout_width="@dimen/avatar"
                    android:layout_height="@dimen/avatar"
                    android:src="@drawable/ava" />

                <TextView
                    style="@style/TextNormal"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/activity_small_margin"
                    android:text="Елена Свистоплясова" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_small_margin"
                android:layout_marginBottom="@dimen/activity_middle_margin">

                <ImageView
                    android:layout_width="@dimen/avatar"
                    android:layout_height="@dimen/avatar"
                    android:src="@drawable/background_add" />

                <TextView
                    style="@style/TextNormal"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/activity_small_margin"
                    android:text="@string/add"
                    android:textColor="@color/colorAccent"
                    android:textSize="15sp" />

            </LinearLayout>

            <include layout="@layout/separate_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_middle_margin"
                android:text="@string/deadline"
                android:textColor="@color/color_separate_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/activity_very_small_margin"
                android:layout_marginBottom="@dimen/activity_middle_margin"
                android:text="27.12, 13:00"
                android:textColor="@color/colorAccent" />

            <include layout="@layout/separate_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_middle_margin"
                android:text="@string/reminder"
                android:textColor="@color/color_separate_line" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_very_small_margin"
                android:layout_marginBottom="@dimen/activity_middle_margin">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_notifications" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/activity_small_margin"
                    android:text="@string/an_hour"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

            <include layout="@layout/separate_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_middle_margin"
                android:layout_marginBottom="@dimen/activity_very_small_margin"
                android:text="@string/tags"
                android:textColor="@color/color_separate_line" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_middle_margin">

                <TextView
                    style="@style/hashtag_background_gray"
                    android:text="@string/meeting" />

                <TextView
                    style="@style/hashtag_background_gray"
                    android:layout_marginLeft="@dimen/activity_small_margin"
                    android:text="@string/conference" />

            </LinearLayout>

            <include layout="@layout/separate_line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Switch
                    android:id="@+id/Switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_middle_margin"
                    android:layout_marginRight="@dimen/activity_middle_margin"
                    android:layout_marginBottom="@dimen/activity_very_small_margin"
                    android:checked="true"
                    android:text="@string/task_requires_confirmation"
                    android:textColor="@color/color_separate_line" />

            </RelativeLayout>

        </LinearLayout>

        <include layout="@layout/separate_line" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/activity_middle_margin"
            android:background="@drawable/background_rounded_light_gray"
            android:drawableLeft="@drawable/ic_chat"
            android:drawablePadding="@dimen/activity_very_small_margin"
            android:paddingLeft="@dimen/activity_middle_margin"
            android:paddingRight="@dimen/activity_middle_margin"
            android:text="@string/go_to_chat"
            android:textColor="@color/colorTextNormal" />

    </LinearLayout>

</ScrollView>