<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:layout_margin="@dimen/activity_small_margin">

    <View
        android:layout_width="3dp"
        android:layout_height="match_parent"
        android:background="@color/colorAccent" />

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_small_margin"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_circle_blue"
                    android:paddingLeft="@dimen/activity_very_small_margin"
                    android:paddingRight="@dimen/activity_very_small_margin"
                    android:text="23"
                    android:textAlignment="center"
                    android:textColor="@color/light_background" />

                <TextView
                    android:id="@+id/tvNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_small_margin"
                    android:text="#1631"
                    android:textColor="@color/color_separate_line" />

                <ImageView
                    android:layout_width="@dimen/circle"
                    android:layout_height="@dimen/circle"
                    android:layout_marginLeft="@dimen/activity_small_margin"
                    android:src="@drawable/ic_time_orange" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_very_small_margin"
                    android:text="27.12, 13:00"
                    android:textColor="@color/yellow" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/activity_small_margin"
                android:layout_toLeftOf="@+id/ciAvatar"
                android:text="@string/who"
                android:textColor="@color/color_separate_line"
                android:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/activity_small_margin"
                android:layout_toLeftOf="@+id/ciAvatar"
                android:text="@string/from"
                android:textColor="@color/color_separate_line"
                android:visibility="gone" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ciAvatar"
                android:layout_width="@dimen/avatar"
                android:layout_height="@dimen/avatar"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ava" />
        </RelativeLayout>

        <TextView
            style="@android:style/TextAppearance.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/text_task"
            android:textColor="@color/colorTextNormal"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_very_small_margin">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meeting"
                    android:textColor="@color/color_separate_line" />

                <TextView
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_small_margin"
                    android:text="@string/conference"
                    android:textColor="@color/color_separate_line" />


                <TextView
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_small_margin"
                    android:text="..."
                    android:textColor="@color/color_separate_line" />

            </LinearLayout>

            <com.robertlevonyan.views.chip.Chip
                android:id="@+id/chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                app:mcv_backgroundColor="@color/light_gray"
                app:mcv_chipText="@string/for_checking"
                app:mcv_cornerRadius="5dp"
                app:mcv_textColor="@color/color_separate_line" />

        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
